syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/schedd/proto";

service Schedd {
  rpc RegisterProcd(RegisterRequest) returns (RegisterResponse);
  rpc Spawn(SpawnRequest) returns (SpawnResponse);
  rpc ProcDone(ProcDoneRequest) returns (ProcDoneResponse);
}

message RegisterRequest {
  string procdIp = 1;
}

message RegisterResponse {
}

message SpawnRequest {
  string realm = 1;
  ProcProto procProto = 2;
}

message SpawnResponse {
}

message ProcDoneRequest {
  ProcProto procProto = 1;
}

message ProcDoneResponse {
  bool oK = 1;
}
